Fix footer so it's always visible.

--- a/src/app.css
+++ b/src/app.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: rgb(142, 70, 225);
+  color: rgb(70, 140, 225);
 }
 
 .wrapper {
